separate operation detection from evaluation